@@ -1,0 +1,5 @@
+<?php
+$words = array(
+);
+?>
+
